added contrast and input sheet validation, adapted from nf-core/rnasplice. todo: add script to ensure condititions in input and contrast match and decide how to pass the input files

--- a/conf/test_cctb.config
+++ b/conf/test_cctb.config
@@ -29,7 +29,15 @@ process {
         memory = 2.GB
         container = '/storage/zar/shared/apptainer_images/multiqc_1.9_pyh9f0ad1d_0.sif'
     }
+    withName: SAMPLESHEET_CHECK{
+        container = '/storage/zar/shared/apptainer_images/python-3.9--1.sif'
+    }
+    withName: CONTRASTSHEET_CHECK{
+        container = '/storage/zar/shared/apptainer_images/python-3.9--1.sif'
+    }
 }
+
+
 
 params {
     config_profile_name        = 'Test profile '
@@ -37,4 +45,6 @@ params {
 
     
     input  = '/storage/zar/projects/felix/majiq_nextflow/zarnack_group_splicing_pipeline/testing_folder/sample_sheet_example.csv'
+    contrasts                  = '/storage/zar/projects/felix/majiq_nextflow/zarnack_group_splicing_pipeline/testing_folder/contrasts_example.csv'
+    source                     = 'fastq'
 }
