--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,8 @@ params {
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
+    contrasts                  = null
+    source                     = null
 
     // MultiQC options
     multiqc_config             = null
