fixed error with bash options in nextflow.config, updated pipeline input processing to support bam files instead of fastq

--- a/conf/test_cctb.config
+++ b/conf/test_cctb.config
@@ -43,8 +43,8 @@ params {
     config_profile_name        = 'Test profile '
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
-    
-    input  = '/storage/zar/projects/felix/majiq_nextflow/zarnack_group_splicing_pipeline/testing_folder/sample_sheet_example.csv'
+
+    input                      = '/home/feh33ik/majiq_pipeline/testing/sample_sheet_example.csv'
     contrasts                  = '/storage/zar/projects/felix/majiq_nextflow/zarnack_group_splicing_pipeline/testing_folder/contrasts_example.csv'
-    source                     = 'fastq'
+    source                     = 'genome_bam'
 }
