added samtool indexing of bam files, updated test data

--- a/conf/test_cctb.config
+++ b/conf/test_cctb.config
@@ -45,6 +45,6 @@ params {
 
 
     input                      = '/home/feh33ik/majiq_pipeline/testing/sample_sheet_example.csv'
-    contrasts                  = '/storage/zar/projects/felix/majiq_nextflow/zarnack_group_splicing_pipeline/testing_folder/contrasts_example.csv'
-    source                     = 'genome_bam'
+    contrasts                  = '/home/feh33ik/majiq_pipeline/testing/contrasts_example.csv'
+    annotation                 = '/storage/zar/shared/organisms/homo_sapiens/annotations/gencode_47_grch38.p14/gencode.v47.annotation.gtf'
 }
