--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ params {
     // Input options
     input                      = null
     contrasts                  = null
-    source                     = null
+    annotation                 = null
 
     // MultiQC options
     multiqc_config             = null
