started building majiq subworkflow

--- a/conf/test_cctb.config
+++ b/conf/test_cctb.config
@@ -46,5 +46,6 @@ params {
 
     input                      = '/home/feh33ik/majiq_pipeline/testing/sample_sheet_example.csv'
     contrasts                  = '/home/feh33ik/majiq_pipeline/testing/contrasts_example.csv'
-    annotation                 = '/storage/zar/shared/organisms/homo_sapiens/annotations/gencode_47_grch38.p14/gencode.v47.annotation.gtf'
+    annotation                 = '/storage/zar/shared/organisms/homo_sapiens/annotations/bed/gencode.v47.basic.annotation.gff3'
+    majiq_license              = '/storage/zar/projects/felix/tools/majiq/majiq_license_academic_official.lic'
 }
