updated nextflow.config defaults for new parameters, moved cctb test data to accesible folder

--- a/conf/test_cctb.config
+++ b/conf/test_cctb.config
@@ -12,7 +12,7 @@
 
 process {
     resourceLimits = [
-        cpus: 12,
+        cpus: 4,
         memory: '15.GB',
         time: '10.h'
     ]
@@ -44,8 +44,8 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
 
-    input                      = '/home/feh33ik/majiq_pipeline/testing/sample_sheet_example.csv'
-    contrasts                  = '/home/feh33ik/majiq_pipeline/testing/contrasts_example.csv'
-    annotation                 = '/storage/zar/shared/organisms/homo_sapiens/annotations/bed/gencode.v47.basic.annotation.gff3'
+    input                      = '/storage/zar/projects/felix/majiq_nextflow/test_data/sample_sheet_example.csv'
+    contrasts                  = '/storage/zar/projects/felix/majiq_nextflow/test_data/contrasts_example.csv'
+    annotation                 = '/storage/zar/projects/felix/majiq_nextflow/test_data/gencode.v47.basic.annotation_chr22.gff3'
     majiq_license              = '/storage/zar/projects/felix/tools/majiq/majiq_license_academic_official.lic'
 }
