--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,12 @@ params {
     input                      = null
     contrasts                  = null
     annotation                 = null
+    majiq_license              = null
+
+    // Majiq options
+    skip_psi                    = false
+    skip_deltapsi               = false
+    skip_heterogen              = false
 
     // MultiQC options
     multiqc_config             = null
