added external argument parameters for majiq modules

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,18 @@ params {
     skip_deltapsi               = false
     skip_heterogen              = false
 
+    // MAJIQ core modules
+    majiq_buildgff3_args    = null
+    majiq_buildsj_args      = null
+    majiq_buildupdate_args  = null
+    majiq_psicoverage_args  = null
+    majiq_psi_args          = null
+    majiq_deltapsi_args     = null
+    majiq_heterogen_args    = null
+    majiq_sgcoverage_args   = null
+    deltapsi_modulize_args  = null
+    heterogen_modulize_args = null
+
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
