--- a/nextflow.config
+++ b/nextflow.config
@@ -166,6 +166,7 @@ profiles {
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
     test_cctb { includeConfig 'conf/test_cctb.config' }
+    cctb      { includeConfig 'conf/cctb.config'      }
 }
 
 // Load nf-core custom profiles from different Institutions
