Added nf-core/RSEQC subworkflow, also integrated into multiqc

--- a/nextflow.config
+++ b/nextflow.config
@@ -33,6 +33,13 @@ params {
     deltapsi_modulize_args  = null
     heterogen_modulize_args = null
 
+    // RSEQC options
+    skip_rseqc                 = false
+    rseqc_modules              = 'bam_stat,infer_experiment,junction_annotation,junction_saturation,read_duplication'
+    stranded_threshold         = 0.8
+    unstranded_threshold       = 0.1
+
+
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
