--- a/nextflow.config
+++ b/nextflow.config
@@ -174,6 +174,8 @@ profiles {
     test_full { includeConfig 'conf/test_full.config' }
     test_cctb { includeConfig 'conf/test_cctb.config' }
     cctb      { includeConfig 'conf/cctb.config'      }
+    test_julia2 { includeConfig 'conf/test_julia2.config' }
+    julia2    { includeConfig 'conf/julia2.config'     }
 }
 
 // Load nf-core custom profiles from different Institutions
