updated zarnack group parameters, regrouped process publishdir outputs, added parameters for bamcoverage execution

--- a/nextflow.config
+++ b/nextflow.config
@@ -39,6 +39,10 @@ params {
     stranded_threshold         = 0.8
     unstranded_threshold       = 0.1
 
+    // DeepTools options
+    skip_deeptools_bamcoverage = false
+    deeptools_bamcoverage_args = null
+
 
     // MultiQC options
     multiqc_config             = null
