--- a/conf/test.config
+++ b/conf/test.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run ZarnackGroup/majiq_splicing_analysis_pipeline -profile test,<docker/singularity> --outdir <OUTDIR>
+        nextflow run ZarnackGroup/majiq_splicing_analysis_pipeline -profile test,<docker/singularity> --outdir <OUTDIR> --majiq_license <MAJIQ_LICENSE> -c <MAJIQ_ENVIRONMENT_CONFIG_FILE>
 
 ----------------------------------------------------------------------------------------
 */
@@ -22,8 +22,8 @@ params {
     config_profile_name        = 'Test profile'
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
-    // Input data
-    // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = params.pipelines_testdata_base_path + 'viralrecon/samplesheet/samplesheet_test_illumina_amplicon.csv'
+    // Input data - from https://github.com/nf-core/test-datasets/tree/rnasplice
+    input  = params.pipelines_testdata_base_path + 'rnasplice/samplesheet/samplesheet_bam.csv'
+    contrasts = params.pipelines_testdata_base_path +'rnasplice/samplesheet/contrastsheet.csv'
+    annotation   = params.pipelines_testdata_base_path +'rnasplice/reference/genes_chrX.gtf'
 }
