added first (passing) test snapshot)

--- a/tests/.nftignore
+++ b/tests/.nftignore
@@ -8,5 +8,18 @@ multiqc/multiqc_data/multiqc_software_versions.txt
 multiqc/multiqc_data/llms-full.txt
 multiqc/multiqc_plots/{svg,pdf,png}/*.{svg,pdf,png}
 multiqc/multiqc_report.html
-fastqc/*_fastqc.{html,zip}
+multiqc/multiqc_data/rseqc_bam_stat.txt
+multiqc/multiqc_data/rseqc_inner_distance*.txt
+multiqc/multiqc_data/rseqc_junction_{annotation,saturation}_*.txt
+multiqc/multiqc_data/rseqc_read_*.txt
+multiqc/multiqc_data/multiqc_rseqc_bam_stat.txt
+multiqc/multiqc_data/multiqc_rseqc_infer_experiment.txt
+multiqc/multiqc_data/multiqc_rseqc_junction_annotation.txt
+multiqc/multiqc_data/multiqc_rseqc_read_distribution.txt
+multiqc/multiqc_data/junction_saturation_known.txt
+multiqc/multiqc_data/junction_saturation_novel.txt
+quality_control/fastqc/*_fastqc.{html,zip}
 pipeline_info/*.{html,json,txt,yml}
+quality_control/rseqc/**
+majiq/**
+processed_inputs/annotation/*.log
