--- a/.github/actions/nf-test/action.yml
+++ b/.github/actions/nf-test/action.yml
@@ -24,6 +24,17 @@ runs:
       with:
         version: "${{ env.NXF_VERSION }}"
 
+    - name: Build MAJIQ container
+      uses: ./.github/actions/build-majiq-container
+      with:
+        dockerfile: "assets/docker/majiq/Dockerfile"
+        image_name: "majiq:latest"
+
+    - name: Configure Nextflow for MAJIQ
+      uses: ./.github/actions/configure-nextflow-majiq
+      with:
+        image_name: "majiq:latest"
+
     - name: Set up Python
       uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6
       with:
