adapted secret sourcing for majiq license

--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -79,6 +79,7 @@ jobs:
     env:
       NXF_ANSI_LOG: false
       TOTAL_SHARDS: ${{ needs.nf-test-changes.outputs.total_shards }}
+      MAJIQ_LICENSE: ${{ secrets.MAJIQ_LICENSE }}
 
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
