Added basic nf-tests and github nf-test workflows
* changed majiq license logic: is now handled via nextflow secrets, corresponding parameter was removed

* * removed unecessary environment.yml (majiq is not on conda) and meta.yml (only local, not nf-core modules) files for majiq processes.
* added basic nf-test for majjiq-build gff3 process

* updated modules_testdata_base_path

* removed cluster specific container images for nf-core modules to avoid mismatches in versions

* updated default.nf.test.snap to use correct nf-core container versions

* added github workflows to create dockerimage and configure majiq modules for github workflows

* added badges to readme

* updated majiq processes to show only the majiq version number, no majiq prefix or build identifier

---------

Co-authored-by: felixhaidle <felix.haidle@uni-wuerzburg.de>
Co-authored-by: felixhaidle <s5005998@stud.uni-frankfurt.de>

--- a/.github/actions/nf-test/action.yml
+++ b/.github/actions/nf-test/action.yml
@@ -24,6 +24,22 @@ runs:
       with:
         version: "${{ env.NXF_VERSION }}"
 
+    - name: Build MAJIQ container
+      uses: ./.github/actions/build-majiq-container
+      with:
+        dockerfile: "assets/docker/majiq/Dockerfile"
+        image_name: "majiq:3_0_6"
+
+    - name: Configure Nextflow for MAJIQ
+      uses: ./.github/actions/configure-nextflow-majiq
+      with:
+        image_name: "docker.io/library/majiq:3_0_6"
+
+    - name: Inject MAJIQ license into Nextflow secrets
+      shell: bash
+      run: |
+        nextflow secrets set MAJIQ_LICENSE "$MAJIQ_LICENSE"
+
     - name: Set up Python
       uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6
       with:
