updated citations and author field in nextflow.config, commit to see if emrmaid renders

--- a/nextflow.config
+++ b/nextflow.config
@@ -202,7 +202,6 @@ includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !pa
 
 
 // Load ZarnackGroup/majiq_splicing_analysis_pipeline custom profiles from different institutions.
-// TODO nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
 // includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !params.custom_config_base.startsWith('http')) ? "${params.custom_config_base}/pipeline/majiq_splicing_analysis_pipeline.config" : "/dev/null"
 
 // Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
@@ -260,14 +259,13 @@ dag {
 manifest {
     name            = 'ZarnackGroup/majiq_splicing_analysis_pipeline'
     contributors    = [
-        // TODO nf-core: Update the field with the details of the contributors to your pipeline. New with Nextflow version 24.10.0
         [
             name: 'Felix Haidle',
-            affiliation: '',
-            email: '',
-            github: '',
-            contribution: [], // List of contribution types ('author', 'maintainer' or 'contributor')
-            orcid: ''
+            affiliation: 'Chair of Bioinformatics II, JMU-Wuerzburg',
+            email: 'felix.haidle@uni-wuerzburg.de',
+            github: 'felixhaidle',
+            contribution: ['author'], // List of contribution types ('author', 'maintainer' or 'contributor')
+            orcid: 'https://orcid.org/0009-0001-9866-052X'
         ],
     ]
     homePage        = 'https://github.com/ZarnackGroup/majiq_splicing_analysis_pipeline'
