--- a/nextflow.config
+++ b/nextflow.config
@@ -27,13 +27,15 @@ params {
     email_on_fail                = null
     plaintext_email              = false
     monochrome_logs              = false
-    hook_url                     = null
+    hook_url                     = System.getenv('HOOK_URL')
     help                         = false
     help_full                    = false
     show_hidden                  = false
     version                      = false
     pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
-    trace_report_suffix          = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')// Config options
+    trace_report_suffix          = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
+
+    // Config options
     config_profile_name        = null
     config_profile_description = null
 
@@ -86,7 +88,18 @@ profiles {
         apptainer.enabled       = false
         docker.runOptions       = '-u $(id -u):$(id -g)'
     }
-    arm {
+    arm64 {
+        process.arch            = 'arm64'
+        // TODO https://github.com/nf-core/modules/issues/6694
+        // For now if you're using arm64 you have to use wave for the sake of the maintainers
+        // wave profile
+        apptainer.ociAutoPull   = true
+        singularity.ociAutoPull = true
+        wave.enabled            = true
+        wave.freeze             = true
+        wave.strategy           = 'conda,container'
+    }
+    emulate_amd64 {
         docker.runOptions       = '-u $(id -u):$(id -g) --platform=linux/amd64'
     }
     singularity {
@@ -232,25 +245,19 @@ manifest {
     description     = """In-house pipeline for analyzing alternative splicing events from RNA sequencing data, based on Nextflow and utilizing MAJIQ as the core splicing analysis tool."""
     mainScript      = 'main.nf'
     defaultBranch   = 'master'
-    nextflowVersion = '!>=24.10.5'
+    nextflowVersion = '!>=25.04.0'
     version         = '1.0.0dev'
     doi             = ''
 }
 
 // Nextflow plugins
 plugins {
-    id 'nf-schema@2.4.2' // Validation of pipeline parameters and creation of an input channel from a sample sheet
+    id 'nf-schema@2.5.1' // Validation of pipeline parameters and creation of an input channel from a sample sheet
 }
 
 validation {
     defaultIgnoreParams = ["genomes"]
     monochromeLogs = params.monochrome_logs
-    help {
-        enabled = true
-        command = "nextflow run ZarnackGroup/majiq_splicing_analysis_pipeline -profile <docker/singularity/.../institute> --input samplesheet.csv --outdir <OUTDIR>"
-        fullParameter = "help_full"
-        showHiddenParameter = "show_hidden"
-    }
 }
 
 // Load modules.config for DSL2 module specific options
