updated majiq workflow - isntead of "psi" now the correct naming - quantify. also included quantify modulize

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -48,7 +48,7 @@ process {
     withName: MAJIQ_BUILDSJ {
         ext.args = { params.majiq_buildsj_args ?: '' }
         publishDir = [
-        path  : { "${params.outdir}/majiq/build" },
+        path  : { "${params.outdir}/majiq" },
         mode  : params.publish_dir_mode,
         saveAs: { f -> f.equals('versions.yml') ? null : f }
         ]
@@ -57,7 +57,7 @@ process {
     withName: MAJIQ_BUILDUPDATE {
         ext.args = { params.majiq_buildupdate_args ?: '' }
         publishDir = [
-        path  : { "${params.outdir}/majiq/build" },
+        path  : { "${params.outdir}/majiq" },
         mode  : params.publish_dir_mode,
         saveAs: { f -> f.equals('versions.yml') ? null : f }
         ]
@@ -66,16 +66,25 @@ process {
     withName: MAJIQ_PSICOVERAGE {
         ext.args = { params.majiq_psicoverage_args ?: '' }
         publishDir = [
-        path  : { "${params.outdir}/majiq/psicoverage" },
+        path  : { "${params.outdir}/majiq/build" },
         mode  : params.publish_dir_mode,
         saveAs: { f -> f.equals('versions.yml') ? null : f }
         ]
     }
 
-    withName: MAJIQ_PSI {
+    withName: MAJIQ_QUANTIFY {
         ext.args = { params.majiq_psi_args ?: '' }
         publishDir = [
-        path  : { "${params.outdir}/majiq/psi" },
+        path  : { "${params.outdir}/majiq" },
+        mode  : params.publish_dir_mode,
+        saveAs: { f -> f.equals('versions.yml') ? null : f }
+        ]
+    }
+
+    withName: QUANTIFY_MODULIZE {
+        ext.args = { params.majiq_psi_args ?: '' }
+        publishDir = [
+        path  : { "${params.outdir}/majiq/quantify" },
         mode  : params.publish_dir_mode,
         saveAs: { f -> f.equals('versions.yml') ? null : f }
         ]
@@ -102,7 +111,7 @@ process {
     withName: MAJIQ_SGCOVERAGE {
         ext.args = { params.majiq_sgcoverage_args ?: '' }
         publishDir = [
-        path  : { "${params.outdir}/majiq/sgcoverage" },
+        path  : { "${params.outdir}/majiq/build/sg-coverage" },
         mode  : params.publish_dir_mode,
         saveAs: { f -> f.equals('versions.yml') ? null : f }
         ]
@@ -113,7 +122,7 @@ process {
     withName: DELTAPSI_MODULIZE {
         ext.args = { params.deltapsi_modulize_args ?: '' }
         publishDir = [
-        path  : { "${params.outdir}/majiq/deltapsi/modulize" },
+        path  : { "${params.outdir}/majiq/deltapsi" },
         mode  : params.publish_dir_mode,
         saveAs: { f -> f.equals('versions.yml') ? null : f }
         ]
@@ -123,7 +132,7 @@ process {
     withName: HETEROGEN_MODULIZE {
         ext.args = { params.heterogen_modulize_args ?: '' }
         publishDir = [
-        path  : { "${params.outdir}/majiq/heterogen/modulize" },
+        path  : { "${params.outdir}/majiq/heterogen" },
         mode  : params.publish_dir_mode,
         saveAs: { f -> f.equals('versions.yml') ? null : f }
         ]
