--- a/conf/cctb.config
+++ b/conf/cctb.config
@@ -5,10 +5,11 @@ process {
     withName: 'MAJIQ_BUILDSJ'           { container = "/storage/zar/shared/apptainer_images/majiq_v3_0_6.sif"                   }
     withName: 'MAJIQ_BUILDUPDATE'       { container = "/storage/zar/shared/apptainer_images/majiq_v3_0_6.sif"                   }
     withName: 'MAJIQ_PSICOVERAGE'       { container = "/storage/zar/shared/apptainer_images/majiq_v3_0_6.sif"                   }
-    withName: 'MAJIQ_PSI'               { container = "/storage/zar/shared/apptainer_images/majiq_v3_0_6.sif"                   }
+    withName: 'MAJIQ_QUANTIFY'          { container = "/storage/zar/shared/apptainer_images/majiq_v3_0_6.sif"                   }
     withName: 'MAJIQ_DELTAPSI'          { container = "/storage/zar/shared/apptainer_images/majiq_v3_0_6.sif"                   }
     withName: 'MAJIQ_HETEROGEN'         { container = "/storage/zar/shared/apptainer_images/majiq_v3_0_6.sif"                   }
     withName: 'MAJIQ_SGCOVERAGE'        { container = "/storage/zar/shared/apptainer_images/majiq_v3_0_6.sif"                   }
     withName: 'DELTAPSI_MODULIZE'       { container = "/storage/zar/shared/apptainer_images/majiq_v3_0_6.sif"                   }
     withName: 'HETEROGEN_MODULIZE'      { container = "/storage/zar/shared/apptainer_images/majiq_v3_0_6.sif"                   }
+    withName: 'QUANTIFY_MODULIZE'       { container = "/storage/zar/shared/apptainer_images/majiq_v3_0_6.sif"                   }
 }
