updated majiq tests (excldued only changing files and .zarr thinigies from .nftingore)

--- a/tests/.nftignore
+++ b/tests/.nftignore
@@ -21,5 +21,13 @@ multiqc/multiqc_data/junction_saturation_novel.txt
 quality_control/fastqc/*_fastqc.{html,zip}
 pipeline_info/*.{html,json,txt,yml}
 quality_control/rseqc/**
-majiq/**
 processed_inputs/annotation/*.log
+majiq/**/.zmetadata
+majiq/**/.zattrs
+majiq/**/*.logger.txt
+majiq/**/modulize/*
+majiq/**/*.deltapsi.tsv
+majiq/**/0.*
+majiq/**/1.*
+majiq/**/0
+majiq/**/1
