updated majiq:psi/quantify ext.args parameters and config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -73,7 +73,7 @@ process {
     }
 
     withName: MAJIQ_QUANTIFY {
-        ext.args = { params.majiq_psi_args ?: '' }
+        ext.args = { params.majiq_quantify_args ?: '' }
         publishDir = [
         path  : { "${params.outdir}/majiq" },
         mode  : params.publish_dir_mode,
@@ -82,7 +82,7 @@ process {
     }
 
     withName: QUANTIFY_MODULIZE {
-        ext.args = { params.majiq_psi_args ?: '' }
+        ext.args = { params.majiq_quantify_modulize_args ?: '' }
         publishDir = [
         path  : { "${params.outdir}/majiq/quantify" },
         mode  : params.publish_dir_mode,
