--- a/nextflow.config
+++ b/nextflow.config
@@ -20,16 +20,17 @@ params {
     skip_heterogen              = false
 
     // MAJIQ core modules
-    majiq_buildgff3_args    = null
-    majiq_buildsj_args      = null
-    majiq_buildupdate_args  = null
-    majiq_psicoverage_args  = null
-    majiq_psi_args          = null
-    majiq_deltapsi_args     = null
-    majiq_heterogen_args    = null
-    majiq_sgcoverage_args   = null
-    deltapsi_modulize_args  = null
-    heterogen_modulize_args = null
+    majiq_buildgff3_args         = null
+    majiq_buildsj_args           = null
+    majiq_buildupdate_args       = null
+    majiq_psicoverage_args       = null
+    majiq_quantify_args          = null
+    majiq_deltapsi_args          = null
+    majiq_heterogen_args         = null
+    majiq_sgcoverage_args        = null
+    deltapsi_modulize_args       = null
+    heterogen_modulize_args      = null
+    majiq_quantify_modulize_args = null
 
     // RSEQC options
     skip_rseqc                 = false
