updated majiq workflow and improved majiq nf-testing (#7)
updated the majiq workflow

* renamed psi process/command to quantify as per majiq manual
* added modulizer for new quantify process
* added nf-test for majiq workflow
* updated tests - made more granular for majiq outputs (the .zarr outputs)

---------

Co-authored-by: felixhaidle <felix.haidle@uni-wuerzburg.de>

--- a/conf/julia2.config
+++ b/conf/julia2.config
@@ -5,10 +5,11 @@ process {
     withName: 'MAJIQ_BUILDSJ'           { container = "/data/42-julia-hpc-bio-zarnack/shared/apptainer/majiq_v3_0_6.sif"                   }
     withName: 'MAJIQ_BUILDUPDATE'       { container = "/data/42-julia-hpc-bio-zarnack/shared/apptainer/majiq_v3_0_6.sif"                   }
     withName: 'MAJIQ_PSICOVERAGE'       { container = "/data/42-julia-hpc-bio-zarnack/shared/apptainer/majiq_v3_0_6.sif"                   }
-    withName: 'MAJIQ_PSI'               { container = "/data/42-julia-hpc-bio-zarnack/shared/apptainer/majiq_v3_0_6.sif"                   }
+    withName: 'MAJIQ_QUANTIFY'          { container = "/data/42-julia-hpc-bio-zarnack/shared/apptainer/majiq_v3_0_6.sif"                   }
     withName: 'MAJIQ_DELTAPSI'          { container = "/data/42-julia-hpc-bio-zarnack/shared/apptainer/majiq_v3_0_6.sif"                   }
     withName: 'MAJIQ_HETEROGEN'         { container = "/data/42-julia-hpc-bio-zarnack/shared/apptainer/majiq_v3_0_6.sif"                   }
     withName: 'MAJIQ_SGCOVERAGE'        { container = "/data/42-julia-hpc-bio-zarnack/shared/apptainer/majiq_v3_0_6.sif"                   }
     withName: 'DELTAPSI_MODULIZE'       { container = "/data/42-julia-hpc-bio-zarnack/shared/apptainer/majiq_v3_0_6.sif"                   }
     withName: 'HETEROGEN_MODULIZE'      { container = "/data/42-julia-hpc-bio-zarnack/shared/apptainer/majiq_v3_0_6.sif"                   }
+    withName: 'QUANTIFY_MODULIZE'       { container = "/data/42-julia-hpc-bio-zarnack/shared/apptainer/majiq_v3_0_6.sif"                   }
 }
