updated IRFinder Workflow and test to adress ne contrast input, updated nextflow schema for new parameters

--- a/nextflow.config
+++ b/nextflow.config
@@ -32,6 +32,12 @@ params {
     heterogen_modulize_args      = null
     majiq_quantify_modulize_args = null
 
+    // IRFinder options
+    skip_irfinder                 = false
+    irfinder_buildrefprocess_args = null
+    irfinder_bam_args             = null
+    irfinder_diff_args            = null
+
     // RSEQC options
     skip_rseqc                 = false
     rseqc_modules              = 'bam_stat,infer_experiment,junction_annotation,junction_saturation,read_duplication'
