added gtf converter, updated multiqc, updated tests, updated irfinder workflow to correctly ignite differential ir

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -279,4 +279,17 @@ process {
         saveAs: { f -> f.equals('versions.yml') ? null : f }
         ]
     }
+
+    withName: GUNZIP {
+        publishDir = [ enabled: false ]
+    }
+
+    withName: AGAT_CONVERTSPGFF2GTF {
+        publishDir = [
+        path  : { "${params.outdir}/processed_inputs/annotation" },
+        mode  : params.publish_dir_mode,
+        saveAs: { f -> f.equals('versions.yml') ? null : f }
+        ]
+    }
+
 }
