--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ params {
     input                      = null
     contrasts                  = null
     annotation                 = null
+    genome_fasta               = null
 
     // Majiq options
     skip_psi                    = false
