--- a/conf/test.config
+++ b/conf/test.config
@@ -26,4 +26,5 @@ params {
     input  = params.pipelines_testdata_base_path + 'rnasplice/samplesheet/samplesheet_bam.csv'
     contrasts = params.pipelines_testdata_base_path +'rnasplice/samplesheet/contrastsheet.csv'
     annotation   = params.pipelines_testdata_base_path +'rnasplice/reference/genes_chrX.gtf'
+    genome_fasta = params.pipelines_testdata_base_path +'rnasplice/reference/X.fa.gz'
 }
