moved suppa parameter to test config to enable it in all test settings because deseq2 fails on the small test data

--- a/conf/test.config
+++ b/conf/test.config
@@ -27,4 +27,7 @@ params {
     contrasts = params.pipelines_testdata_base_path +'rnasplice/samplesheet/contrastsheet.csv'
     annotation   = params.pipelines_testdata_base_path +'rnasplice/reference/genes_chrX.gtf'
     genome_fasta = params.pipelines_testdata_base_path +'rnasplice/reference/X.fa.gz'
+    
+    // Suppa mode for IRFinder diff, deseq2 crashes on small datasets
+    irfinder_diff_args = '-m suppa'
 }
