--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -50,6 +50,7 @@ jobs:
           NFT_VER: ${{ env.NFT_VER }}
         with:
           max_shards: 7
+          tags: "ci"
 
       - name: debug
         run: |
@@ -97,6 +98,7 @@ jobs:
           profile: ${{ matrix.profile }}
           shard: ${{ matrix.shard }}
           total_shards: ${{ env.TOTAL_SHARDS }}
+          tags: "ci"
 
       - name: Report test status
         if: ${{ always() }}
