--- a/conf/modules.config
+++ b/conf/modules.config
@@ -253,4 +253,43 @@ process {
         ]
     }
 
+    withName: IRFINDER_BUILDREFPROCESS {
+        ext.args = { params.irfinder_buildrefprocess_args ?: '' }
+        publishDir = [
+        path  : { "${params.outdir}/irfinder" },
+        mode  : params.publish_dir_mode,
+        saveAs: { f -> f.equals('versions.yml') ? null : f }
+        ]
+    }
+
+    withName: IRFINDER_BAM {
+        ext.args = { params.irfinder_bam_args ?: '' }
+        publishDir = [
+        path  : { "${params.outdir}/irfinder" },
+        mode  : params.publish_dir_mode,
+        saveAs: { f -> f.equals('versions.yml') ? null : f }
+        ]
+    }
+
+    withName: IRFINDER_DIFF {
+        ext.args = { params.irfinder_diff_args ?: '' }
+        publishDir = [
+        path  : { "${params.outdir}/irfinder" },
+        mode  : params.publish_dir_mode,
+        saveAs: { f -> f.equals('versions.yml') ? null : f }
+        ]
+    }
+
+    withName: GUNZIP {
+        publishDir = [ enabled: false ]
+    }
+
+    withName: AGAT_CONVERTSPGFF2GTF {
+        publishDir = [
+        path  : { "${params.outdir}/processed_inputs/annotation" },
+        mode  : params.publish_dir_mode,
+        saveAs: { f -> f.equals('versions.yml') ? null : f }
+        ]
+    }
+
 }
