--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ params {
     input                      = null
     contrasts                  = null
     annotation                 = null
+    genome_fasta               = null
 
     // Majiq options
     skip_psi                    = false
@@ -31,6 +32,12 @@ params {
     deltapsi_modulize_args       = null
     heterogen_modulize_args      = null
     majiq_quantify_modulize_args = null
+
+    // IRFinder options
+    skip_irfinder                 = false
+    irfinder_buildrefprocess_args = null
+    irfinder_bam_args             = null
+    irfinder_diff_args            = null
 
     // RSEQC options
     skip_rseqc                 = false
