--- a/conf/test.config
+++ b/conf/test.config
@@ -26,4 +26,8 @@ params {
     input  = params.pipelines_testdata_base_path + 'rnasplice/samplesheet/samplesheet_bam.csv'
     contrasts = params.pipelines_testdata_base_path +'rnasplice/samplesheet/contrastsheet.csv'
     annotation   = params.pipelines_testdata_base_path +'rnasplice/reference/genes_chrX.gtf'
+    genome_fasta = params.pipelines_testdata_base_path +'rnasplice/reference/X.fa.gz'
+
+    // Suppa mode for IRFinder diff, deseq2 crashes on small datasets
+    irfinder_diff_args = '-m suppa'
 }
