added quarto notebook process, added a container using seqera wave, updated majiq outputs so modulize results can get passed to the downstream analysis processes

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -292,4 +292,14 @@ process {
         ]
     }
 
+    withName: 'QUARTONOTEBOOK_DELTAPSI' {
+        // Wave container - https://wave.seqera.io/view/builds/bd-1b02344c385045c7_1
+        container = 'community.wave.seqera.io/library/matplotlib_papermill_quarto_r-rmarkdown_pruned:1b02344c385045c7'
+
+        publishDir = [
+            path: { "${params.outdir}/reports" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
 }
