--- a/conf/modules.config
+++ b/conf/modules.config
@@ -293,8 +293,8 @@ process {
     }
 
     withName: 'QUARTONOTEBOOK_DELTAPSI' {
-        // Wave container - https://wave.seqera.io/view/builds/bd-1b02344c385045c7_1
-        container = 'community.wave.seqera.io/library/matplotlib_papermill_quarto_r-rmarkdown_pruned:1b02344c385045c7'
+        // Wave container build page - https://wave.seqera.io/view/builds/bd-a067462ed5026286_1
+        container = 'community.wave.seqera.io/library/matplotlib_papermill_quarto_r-openxlsx_pruned:a067462ed5026286'
 
         publishDir = [
             path: { "${params.outdir}/reports" },
