updated tests, removed versions file from quartonotebook module publishdir

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -298,7 +298,8 @@ process {
 
         publishDir = [
             path: { "${params.outdir}/reports" },
-            mode: params.publish_dir_mode
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
