Majiq downstream report (#11)
* created new subworkflow for downstream analysis of majiq results
* added first downstream report for the deltapsi modulize outputs
* updated majiq outputs so results get passed correctly to the following steps

---------

Co-authored-by: felixhaidle <felix.haidle@uni-wuerzburg.de>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -292,4 +292,15 @@ process {
         ]
     }
 
+    withName: 'QUARTONOTEBOOK_DELTAPSI' {
+        // Wave container build page - https://wave.seqera.io/view/builds/bd-a067462ed5026286_1
+        container = 'community.wave.seqera.io/library/matplotlib_papermill_quarto_r-openxlsx_pruned:a067462ed5026286'
+
+        publishDir = [
+            path: { "${params.outdir}/reports" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
 }
