incremented pipeline version to 0.1.0

--- a/nextflow.config
+++ b/nextflow.config
@@ -209,9 +209,6 @@ profiles {
 includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !params.custom_config_base.startsWith('http')) ? "${params.custom_config_base}/nfcore_custom.config" : "/dev/null"
 
 
-// Load ZarnackGroup/majiq_splicing_analysis_pipeline custom profiles from different institutions.
-// includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !params.custom_config_base.startsWith('http')) ? "${params.custom_config_base}/pipeline/majiq_splicing_analysis_pipeline.config" : "/dev/null"
-
 // Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
 // Will not be used unless Apptainer / Docker / Podman / Charliecloud / Singularity are enabled
 // Set to your registry if you have a mirror of containers
@@ -281,7 +278,7 @@ manifest {
     mainScript      = 'main.nf'
     defaultBranch   = 'master'
     nextflowVersion = '!>=25.04.0'
-    version         = '1.0.0dev'
+    version         = '0.1.0'
     doi             = ''
 }
 
